# atlas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ATLAS-FULL-TASKS.md  Dockerfile  MISSION.md  README.md  REPLICATION.md  SESSION-SUMMARY-2026-03-26.md  SETUP-GUIDE.md  TODO-2026-03-07.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
atlas/: PHILOSOPHY.md  __init__.py  standards.py
atlas/agents/: __init__.py  analyst.py  architect.py  base.py  build_preview.py  buzz.py  code_validator.py  cortex.py  director.py  expert.py  factory.py  finisher.py  governor.py  guidance.py  hype.py  idea_conversation.py  kickoff.py  launch.py  manager.py  mason.py  memory.py  message_broker.py  mockup.py  ollama_provider.py  oracle.py  personalities.py  planner.py  qc.py  roundtable.py  (+6 more)
config/: atlas.yaml
docs/: 2026-02-10-atlas-development-session.md  2026-02-10-optimization-and-memory-session.md  BUILD-PLAN.md  LESSONS-LEARNED.md  MOBILE_SETUP.md  NEXT-SESSION.md  PROGRESS.md  ROADMAP.md  TODO-2026-03-18.md  USAGE.md  USER-MANUAL.md
migrations/: 001_physical_to_printable.py  002_sync_product_type.py  003_fix_build_preview_types.py  __init__.py
scripts/: atlas  atlas-auth  atlas-daemon  atlas-hotkey-v1.ahk  atlas-hotkey.ahk  atlas-hotkeys-v1.ahk  atlas-overnight  atlas-remote  atlas-tray.py  atlas-voice  atlas-voice-hotkey-v1.ahk  atlas-web  overnight-cron.sh  overnight-runner.sh  push-to-docs  setup-mcp  setup.sh  update-manual
services/: atlas.service
tests/: conftest.py  test_team_conversation.py
(+275 files in other folders)
